@@ -1,5 +1,7 @@
 package com.wink.backend.service;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.wink.backend.dto.*;
 import com.wink.backend.entity.ChatMessage;
 import com.wink.backend.entity.ChatSession;
@@ -9,12 +11,9 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class ChatService {
@@ -37,16 +36,36 @@ public class ChatService {
         this.restTemplate = new RestTemplate();
     }
 
-    // ================================
+    // =====================================================
+    // 🚀 공통: 이전 세션 종료 (같은 타입만)
+    // =====================================================
+    private void endPreviousSessions(String type) {
+        List<ChatSession> sessions = sessionRepo.findByTypeOrderByStartTimeDesc(type);
+        for (ChatSession s : sessions) {
+            if (!Boolean.TRUE.equals(s.getIsEnded())) {
+                s.setIsEnded(true);
+                s.setEndTime(LocalDateTime.now());
+                sessionRepo.save(s);
+            }
+        }
+    }
+
+    // =====================================================
     // ① 나의 순간 시작
-    // ================================
+    // =====================================================
     public ChatStartResponse startMy(ChatStartMyRequest req) {
+
+        endPreviousSessions("MY"); // 같은 타입 모두 종료
+
         ChatSession session = new ChatSession();
         session.setType("MY");
         session.setStartTime(LocalDateTime.now());
+        session.setIsEnded(false);
 
+        // 🔥 제미나이 기반 주제 생성 (너가 만든 로직 그대로)
         String topic = geminiService.extractTopic(req.getInputText());
         session.setTopic(topic);
+
         sessionRepo.save(session);
 
         return new ChatStartResponse(
@@ -58,21 +77,28 @@ public class ChatService {
         );
     }
 
-    // ================================
+    // =====================================================
     // ② 공간의 순간 시작
-    // ================================
+    // =====================================================
     public ChatStartResponse startSpace(ChatStartSpaceRequest req) {
+
+        endPreviousSessions("SPACE"); // 같은 타입 모두 종료
+
         ChatSession session = new ChatSession();
         session.setType("SPACE");
         session.setStartTime(LocalDateTime.now());
+        session.setIsEnded(false);
 
+        // 주변 음악 요약
         String nearbySummary = "";
         if (req.getNearbyMusic() != null && !req.getNearbyMusic().isEmpty()) {
             nearbySummary = req.getNearbyMusic().stream()
                     .map(m -> m.getTitle() + " - " + m.getArtist())
-                    .reduce((a, b) -> a + ", " + b).orElse("");
+                    .reduce((a, b) -> a + ", " + b)
+                    .orElse("");
         }
 
+        // 🔥 네가 만든 장소 기반 프롬프트 그대로 적용
         String prompt = String.format(
                 "📍장소명: %s (%s)\n🎧 주변 음악: %s\n이 장소의 분위기와 어울리는 음악적 주제를 한 문장으로 요약해줘.",
                 req.getLocation().getPlaceName(),
@@ -82,6 +108,7 @@ public class ChatService {
 
         String topic = geminiService.extractTopic(prompt);
         session.setTopic(topic);
+
         sessionRepo.save(session);
 
         return new ChatStartResponse(
@@ -93,9 +120,9 @@ public class ChatService {
         );
     }
 
-    // ================================
-    // ③ AI 서버 호출 → AI 응답 생성
-    // ================================
+    // =====================================================
+    // ③ AI 응답 생성 (AI 메시지 저장)
+    // =====================================================
     public AiResponseResponse generateAiResponse(AiResponseRequest req) {
         try {
             Long sessionId = req.getSessionId();
@@ -104,6 +131,7 @@ public class ChatService {
 
             String topic = session.getTopic();
 
+            // AI 서버 요청 payload
             Map<String, Object> payload = new HashMap<>();
             payload.put("sessionId", sessionId);
             payload.put("topic", topic);
@@ -114,71 +142,59 @@ public class ChatService {
             headers.setContentType(MediaType.APPLICATION_JSON);
             HttpEntity<Map<String, Object>> entity = new HttpEntity<>(payload, headers);
 
-            System.out.println("🚀 Flask 요청: " + aiServerUrl);
-            System.out.println("📦 Payload: " + mapper.writeValueAsString(payload));
-
             ResponseEntity<String> response = restTemplate.exchange(
                     aiServerUrl, HttpMethod.POST, entity, String.class);
 
-            System.out.println("📥 Flask 응답: " + response.getStatusCode());
-            System.out.println("📦 Body: " + response.getBody());
-
-            // 사용자 메시지 저장
-            ChatMessage userMsg = new ChatMessage();
-            userMsg.setSession(session);
-            userMsg.setSender("user");
-            userMsg.setText(req.getInputText());
-            userMsg.setImageUrl(null);
-            messageRepo.save(userMsg);
-
-            if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
-                JsonNode root = mapper.readTree(response.getBody());
-
-                String mergedSentence = root.path("mergedSentence").asText("");
-                String interpretedSentence = geminiService.interpretMergedSentence(mergedSentence);
-
-                List<String> keywords = mapper.convertValue(
-                        root.path("keywords"),
-                        mapper.getTypeFactory().constructCollectionType(List.class, String.class)
-                );
-                keywords = geminiService.translateKeywords(keywords);
-
-                List<AiResponseResponse.Recommendation> recs = new ArrayList<>();
-                for (JsonNode songNode : root.path("recommendations")) {
-                    recs.add(AiResponseResponse.Recommendation.builder()
-                            .songId(songNode.has("songId") ? songNode.path("songId").asText() : null)
-                            .title(songNode.path("title").asText(""))
-                            .artist(songNode.path("artist").asText(""))
-                            .albumCover(songNode.path("albumCover").asText(""))
-                            .previewUrl(songNode.path("previewUrl").asText(""))
-                            .build());
-                }
-
-                String aiMessage = root.path("aiMessage").asText("AI 추천 결과입니다.");
-
-                ChatMessage aiMsg = new ChatMessage();
-                aiMsg.setSession(session);
-                aiMsg.setSender("ai");
-                aiMsg.setText(aiMessage);
-                aiMsg.setKeywordsJson(mapper.writeValueAsString(keywords));
-                aiMsg.setRecommendationsJson(mapper.writeValueAsString(recs));
-                aiMsg.setMergedSentence(mergedSentence);
-                aiMsg.setInterpretedSentence(interpretedSentence);
-                messageRepo.save(aiMsg);
-
-                return AiResponseResponse.builder()
-                        .sessionId(sessionId)
-                        .topic(topic)
-                        .keywords(keywords)
-                        .aiMessage(aiMessage)
-                        .mergedSentence(mergedSentence)
-                        .interpretedSentence(interpretedSentence)
-                        .recommendations(recs)
-                        .timestamp(LocalDateTime.now())
-                        .build();
+            if (response.getStatusCode() != HttpStatus.OK || response.getBody() == null) {
+                throw new RuntimeException("AI Server Error");
             }
 
-            throw new RuntimeException("AI server returned " + response.getStatusCode());
+            JsonNode root = mapper.readTree(response.getBody());
+
+            // AI 결과 파싱
+            String mergedSentence = root.path("mergedSentence").asText("");
+            String interpretedSentence = geminiService.interpretMergedSentence(mergedSentence);
+
+            List<String> keywords = mapper.convertValue(
+                    root.path("keywords"),
+                    mapper.getTypeFactory().constructCollectionType(List.class, String.class)
+            );
+            keywords = geminiService.translateKeywords(keywords);
+
+            List<AiResponseResponse.Recommendation> recs = new ArrayList<>();
+            for (JsonNode songNode : root.path("recommendations")) {
+                recs.add(AiResponseResponse.Recommendation.builder()
+                        .songId(songNode.path("songId").asText(null))
+                        .title(songNode.path("title").asText(""))
+                        .artist(songNode.path("artist").asText(""))
+                        .albumCover(songNode.path("albumCover").asText(""))
+                        .previewUrl(songNode.path("previewUrl").asText(""))
+                        .build());
+            }
+
+            String aiMessage = root.path("aiMessage").asText("AI 추천 결과입니다.");
+
+            // AI 메시지 저장
+            ChatMessage aiMsg = new ChatMessage();
+            aiMsg.setSession(session);
+            aiMsg.setSender("ai");
+            aiMsg.setText(aiMessage);
+            aiMsg.setKeywordsJson(mapper.writeValueAsString(keywords));
+            aiMsg.setRecommendationsJson(mapper.writeValueAsString(recs));
+            aiMsg.setMergedSentence(mergedSentence);
+            aiMsg.setInterpretedSentence(interpretedSentence);
+            messageRepo.save(aiMsg);
+
+            return AiResponseResponse.builder()
+                    .sessionId(sessionId)
+                    .topic(topic)
+                    .keywords(keywords)
+                    .aiMessage(aiMessage)
+                    .mergedSentence(mergedSentence)
+                    .interpretedSentence(interpretedSentence)
+                    .recommendations(recs)
+                    .timestamp(LocalDateTime.now())
+                    .build();
 
         } catch (Exception e) {
             e.printStackTrace();
@@ -193,166 +209,47 @@ public class ChatService {
         }
     }
 
-    // ================================
-    // ④ 나의 순간 히스토리
-    // ================================
-    public ChatHistoryResponse getMyChatHistory(Long sessionId) {
-        return buildChatHistory(sessionId, "MY");
-    }
+    // =====================================================
+    // ④ 최신 세션 전체 메시지 조회
+    // =====================================================
+    public ChatHistoryResponse getChatFullHistory(Long sessionId) {
 
-    // ================================
-    // ⑤ 공간의 순간 히스토리
-    // ================================
-    public ChatHistoryResponse getSpaceChatHistory(Long sessionId) {
-        return buildChatHistory(sessionId, "SPACE");
-    }
-
-    // ================================
-    // 공통 히스토리 생성
-    // ================================
-    private ChatHistoryResponse buildChatHistory(Long sessionId, String expectedType) {
         ChatSession session = sessionRepo.findById(sessionId)
-                .orElseThrow(() -> new RuntimeException("Session not found: " + sessionId));
+                .orElseThrow(() -> new RuntimeException("Session not found"));
 
-        if (!expectedType.equals(session.getType())) {
-            throw new RuntimeException("잘못된 세션 타입입니다. (" + session.getType() + ")");
+        // 최신 세션인지 체크
+        Optional<ChatSession> latest =
+                sessionRepo.findTopByTypeOrderByStartTimeDesc(session.getType());
+
+        if (latest.isEmpty() || !Objects.equals(latest.get().getId(), sessionId)) {
+            throw new RuntimeException("최신 세션만 전체 대화 조회 가능합니다.");
         }
 
         List<ChatMessage> messages = messageRepo.findBySessionIdOrderByCreatedAtAsc(sessionId);
-        List<ChatMessageResponse> messageResponses = new ArrayList<>();
 
+        List<ChatMessageResponse> list = new ArrayList<>();
         for (ChatMessage msg : messages) {
+
             List<String> keywords = new ArrayList<>();
             List<AiResponseResponse.Recommendation> recs = new ArrayList<>();
             try {
                 if (msg.getKeywordsJson() != null)
                     keywords = mapper.readValue(msg.getKeywordsJson(), List.class);
-                if (msg.getRecommendationsJson() != null)
-                    recs = Arrays.asList(mapper.readValue(
-                            msg.getRecommendationsJson(),
-                            AiResponseResponse.Recommendation[].class
-                    ));
-            } catch (Exception ignored) {}
-
-            messageResponses.add(ChatMessageResponse.builder()
-                    .messageId(msg.getId())
-                    .sender(msg.getSender())
-                    .text(msg.getText())
-                    .keywords(keywords)
-                    .recommendations(recs)
-                    .timestamp(msg.getCreatedAt())
-                    .build());
-        }
-
-        return ChatHistoryResponse.builder()
-                .sessionId(session.getId())
-                .type(session.getType())
-                .topic(session.getTopic())
-                .messages(messageResponses)
-                .build();
-    }
-
-    // ================================
-    // ⑥ 메시지 전송 (일반)
-    // ================================
-    public ChatMessageResponse sendMessage(ChatMessageRequest req) {
-        Long sessionId = req.getSessionId();
-        ChatSession session = sessionRepo.findById(sessionId)
-                .orElseThrow(() -> new RuntimeException("Session not found: " + sessionId));
-
-        Optional<ChatSession> latestSession = sessionRepo.findTopByTypeOrderByStartTimeDesc(session.getType());
-        if (latestSession.isEmpty() || !Objects.equals(latestSession.get().getId(), sessionId)) {
-            throw new RuntimeException("Only the latest session allows new messages.");
-        }
-
-        ChatMessage msg = new ChatMessage();
-        msg.setSession(session);
-        msg.setSender("user");
-        msg.setText(req.getText());
-        if (req.getImageBase64() != null && !req.getImageBase64().isEmpty()) {
-            msg.setImageUrl(String.join(",", req.getImageBase64()));
-        }
-        messageRepo.save(msg);
-
-        return ChatMessageResponse.builder()
-                .messageId(msg.getId())
-                .sender(msg.getSender())
-                .text(msg.getText())
-                .timestamp(msg.getCreatedAt())
-                .build();
-    }
-
-    // ================================
-    // ⑦ 메시지 전송 (신규 구조)
-    // ================================
-    public ChatMessageResponse sendUserMessage(ChatMessageRequest req) {
-        Long sessionId = req.getSessionId();
-        ChatSession session = sessionRepo.findById(sessionId)
-                .orElseThrow(() -> new RuntimeException("Session not found: " + sessionId));
-
-        Optional<ChatSession> latestSession = sessionRepo.findTopByTypeOrderByStartTimeDesc(session.getType());
-        if (latestSession.isEmpty() || !Objects.equals(latestSession.get().getId(), sessionId)) {
-            throw new RuntimeException("Only the latest session allows new messages.");
-        }
-
-        ChatMessage msg = new ChatMessage();
-        msg.setSession(session);
-        msg.setSender(req.getSender() != null ? req.getSender() : "user");
-        msg.setText(req.getText());
-        if (req.getImageBase64() != null && !req.getImageBase64().isEmpty()) {
-            msg.setImageUrl(String.join(",", req.getImageBase64()));
-        }
-        messageRepo.save(msg);
-
-        return ChatMessageResponse.builder()
-                .messageId(msg.getId())
-                .sessionId(sessionId)
-                .sender(msg.getSender())
-                .text(msg.getText())
-                .keywords(null)
-                .recommendations(null)
-                .timestamp(msg.getCreatedAt())
-                .build();
-    }
-
-    // ================================
-    // ⑧ 메시지 내용 조회 + 요약 + 대표 메시지 API
-    // ================================
-    public ChatSummaryResponse getChatSummary(Long sessionId) {
-        ChatSession session = sessionRepo.findById(sessionId)
-                .orElseThrow(() -> new RuntimeException("Session not found: " + sessionId));
-
-        List<ChatMessage> messages = messageRepo.findBySessionIdOrderByCreatedAtAsc(sessionId);
-
-        if (messages.isEmpty()) {
-            throw new RuntimeException("No messages found for session: " + sessionId);
-        }
-
-        // 전체 메시지 → 프론트용 변환
-        List<ChatMessageResponse> messageResponses = new ArrayList<>();
-
-        for (ChatMessage msg : messages) {
-            List<String> keywords = new ArrayList<>();
-            List<AiResponseResponse.Recommendation> recs = new ArrayList<>();
-
-            try {
-                if (msg.getKeywordsJson() != null)
-                    keywords = mapper.readValue(msg.getKeywordsJson(), List.class);
 
                 if (msg.getRecommendationsJson() != null)
-                    recs = Arrays.asList(mapper.readValue(
-                            msg.getRecommendationsJson(),
-                            AiResponseResponse.Recommendation[].class
-                    ));
+                    recs = Arrays.asList(
+                            mapper.readValue(msg.getRecommendationsJson(),
+                                    AiResponseResponse.Recommendation[].class)
+                    );
             } catch (Exception ignored) {}
 
-            messageResponses.add(ChatMessageResponse.builder()
+            list.add(ChatMessageResponse.builder()
                     .messageId(msg.getId())
                     .sessionId(sessionId)
                     .sender(msg.getSender())
                     .text(msg.getText())
                     .imageBase64(msg.getImageUrl() != null
-                            ? Arrays.asList(msg.getImageUrl().split(","))
+                            ? List.of(msg.getImageUrl())
                             : null)
                     .keywords(keywords)
                     .recommendations(recs)
@@ -360,99 +257,188 @@ public class ChatService {
                     .build());
         }
 
-        // 가장 최신 사용자 메시지
-        ChatMessage latestUserMsg = messages.stream()
+        return ChatHistoryResponse.builder()
+                .sessionId(sessionId)
+                .type(session.getType())
+                .topic(session.getTopic())
+                .isLatest(true)
+                .messages(list)
+                .build();
+    }
+
+    // =====================================================
+    // ⑤ 요약 조회 (최신 세션 제외)
+    // =====================================================
+    public ChatSummaryResponse getChatSummary(Long sessionId) {
+
+        ChatSession session = sessionRepo.findById(sessionId)
+                .orElseThrow(() -> new RuntimeException("Session not found"));
+
+        Optional<ChatSession> latest =
+                sessionRepo.findTopByTypeOrderByStartTimeDesc(session.getType());
+
+        if (latest.isPresent() && Objects.equals(latest.get().getId(), sessionId)) {
+            throw new RuntimeException("최신 세션은 요약 페이지를 사용할 수 없습니다.");
+        }
+
+        List<ChatMessage> messages =
+                messageRepo.findBySessionIdOrderByCreatedAtAsc(sessionId);
+
+        if (messages.isEmpty()) {
+            throw new RuntimeException("메시지가 없습니다.");
+        }
+
+        // 대표 user 메시지
+        ChatMessage lastUserMsg = messages.stream()
                 .filter(m -> m.getSender().equals("user"))
-                .reduce((first, second) -> second)
-                .orElse(null);
+                .reduce((a, b) -> b).orElse(null);
 
-        String representativeText = (latestUserMsg != null) ? latestUserMsg.getText() : null;
-
-        List<String> representativeImages =
-                (latestUserMsg != null && latestUserMsg.getImageUrl() != null)
-                        ? Arrays.asList(latestUserMsg.getImageUrl().split(","))
+        String repText = lastUserMsg != null ? lastUserMsg.getText() : null;
+        List<String> repImages =
+                (lastUserMsg != null && lastUserMsg.getImageUrl() != null)
+                        ? List.of(lastUserMsg.getImageUrl())
                         : null;
 
-        // 전체 요약 생성 (Gemini)
-        String fullConversationText = messages.stream()
+        // 전체 대화 요약
+        String full = messages.stream()
                 .map(ChatMessage::getText)
                 .filter(Objects::nonNull)
                 .reduce((a, b) -> a + "\n" + b)
                 .orElse("");
 
-        String summary = geminiService.summarizeConversation(fullConversationText);
+        String summary = geminiService.summarizeConversation(full);
+        String latestUserSummary =
+                repText != null ? geminiService.summarizeSentence(repText) : null;
 
-        // 최신 메시지 요약
-        // TODO: GeminiService에 'summarizeSentence(String text)' 메서드를 실제로 구현해야 합니다.
-        String latestUserSummary = (representativeText != null) ? geminiService.summarizeSentence(representativeText) : null;
+        // 마지막 AI 메시지 정보
+        ChatMessage lastAi = messages.stream()
+                .filter(m -> m.getSender().equals("ai"))
+                .reduce((a, b) -> b).orElse(null);
+
+        List<String> keywords = new ArrayList<>();
+        List<AiResponseResponse.Recommendation> recs = new ArrayList<>();
+        String merged = null;
+        String interpreted = null;
+
+        if (lastAi != null) {
+            try {
+                if (lastAi.getKeywordsJson() != null)
+                    keywords = mapper.readValue(lastAi.getKeywordsJson(), List.class);
+
+                if (lastAi.getRecommendationsJson() != null)
+                    recs = Arrays.asList(
+                            mapper.readValue(lastAi.getRecommendationsJson(),
+                                    AiResponseResponse.Recommendation[].class));
+
+                merged = lastAi.getMergedSentence();
+                interpreted = lastAi.getInterpretedSentence();
+
+            } catch (Exception ignored) {}
+        }
+
+        ChatSummaryResponse.SummaryMode mode =
+                ChatSummaryResponse.SummaryMode.builder()
+                        .summary(summary)
+                        .keywords(keywords)
+                        .recommendations(recs)
+                        .mergedSentence(merged)
+                        .interpretedSentence(interpreted)
+                        .build();
 
         return ChatSummaryResponse.builder()
                 .sessionId(sessionId)
+                .type(session.getType())
                 .topic(session.getTopic())
+                .isLatest(false)
+                .representativeText(repText)
+                .representativeImages(repImages)
                 .latestUserSummary(latestUserSummary)
-                .summaryMode(ChatSummaryResponse.SummaryMode.builder()
-                        .representativeText(representativeText)
-                        .representativeImages(representativeImages)
-                        .summary(summary)
-                        .keywords(extractAllKeywords(messages))
-                        .recommendations(extractAllRecommendations(messages))
-                        .build())
-                .messages(messageResponses)
+                .summaryMode(mode)
                 .timestamp(session.getStartTime())
                 .build();
     }
 
-    // ================================
-    // 누락된 보조 메서드 추가
-    // ================================
+    // =====================================================
+    // ⑥ 후속 메시지 전송 (user → AI 호출)
+    // =====================================================
+    public ChatMessageResponse sendUserMessage(ChatMessageRequest req) {
+        Long sessionId = req.getSessionId();
 
-    /**
-     * 모든 ChatMessage에서 중복을 제거한 키워드를 추출했습니다.
-     * @param messages 채팅 메시지 목록
-     * @return 키워드 목록
-     */
-    private List<String> extractAllKeywords(List<ChatMessage> messages) {
-        Set<String> uniqueKeywords = new HashSet<>();
-        for (ChatMessage msg : messages) {
-            if (msg.getKeywordsJson() != null) {
-                try {
-                    List<String> keywords = mapper.readValue(msg.getKeywordsJson(), List.class);
-                    uniqueKeywords.addAll(keywords);
-                } catch (Exception ignored) {
-                    // JSON 파싱 오류는 무시합니다.
-                }
-            }
+        ChatSession session = sessionRepo.findById(sessionId)
+                .orElseThrow(() -> new RuntimeException("Session not found"));
+
+        // 최신 세션인지 체크
+        Optional<ChatSession> latest =
+                sessionRepo.findTopByTypeOrderByStartTimeDesc(session.getType());
+
+        if (latest.isEmpty() || !Objects.equals(latest.get().getId(), sessionId)) {
+            throw new RuntimeException("이전 세션에는 후속 메시지를 보낼 수 없습니다.");
         }
-        return new ArrayList<>(uniqueKeywords);
+
+        // ① 사용자 메시지 저장
+        ChatMessage userMsg = new ChatMessage();
+        userMsg.setSession(session);
+        userMsg.setSender("user");
+        userMsg.setText(req.getText());
+        if (req.getImageBase64() != null && !req.getImageBase64().isBlank()) {
+            userMsg.setImageUrl(req.getImageBase64());
+        }
+        messageRepo.save(userMsg);
+
+        // ② AI 호출
+        AiResponseRequest aiReq = new AiResponseRequest();
+        aiReq.setSessionId(sessionId);
+        aiReq.setInputText(req.getText());
+        aiReq.setImageBase64(req.getImageBase64());
+
+        AiResponseResponse aiRes = generateAiResponse(aiReq);
+
+        // ③ 사용자 메시지 기준 응답 반환
+        return ChatMessageResponse.builder()
+                .messageId(userMsg.getId())
+                .sessionId(sessionId)
+                .sender("user")
+                .text(req.getText())
+                .imageBase64(req.getImageBase64() != null && !req.getImageBase64().isBlank()
+                        ? List.of(req.getImageBase64()) : null)
+                .keywords(aiRes.getKeywords())
+                .recommendations(aiRes.getRecommendations())
+                .timestamp(userMsg.getCreatedAt())
+                .build();
     }
 
-    /**
-     * 모든 ChatMessage에서 중복을 제거한 추천 목록을 추출했습니다.
-     * @param messages 채팅 메시지 목록
-     * @return 추천 목록
-     */
-    private List<AiResponseResponse.Recommendation> extractAllRecommendations(List<ChatMessage> messages) {
-        // 중복 제거를 위해 Set을 사용하지만, Recommendation 객체에 equals/hashCode가 구현되어 있어야 제대로 동작했습니다.
-        // 여기서는 단순성을 위해 List로 반환하고, 노래 ID로 중복을 제거했습니다.
-        Map<String, AiResponseResponse.Recommendation> uniqueRecommendations = new HashMap<>();
+    // =====================================================
+    // ⑦ 세션 목록 조회
+    // =====================================================
+    public List<ChatSessionSummaryResponse> getSessionList(String type) {
+        List<ChatSession> sessions = sessionRepo.findByTypeOrderByStartTimeDesc(type);
 
-        for (ChatMessage msg : messages) {
-            if (msg.getRecommendationsJson() != null) {
-                try {
-                    List<AiResponseResponse.Recommendation> recs = Arrays.asList(mapper.readValue(
-                            msg.getRecommendationsJson(),
-                            AiResponseResponse.Recommendation[].class
-                    ));
-                    for (AiResponseResponse.Recommendation rec : recs) {
-                        if (rec.getSongId() != null) {
-                            uniqueRecommendations.putIfAbsent(rec.getSongId(), rec);
-                        }
-                    }
-                } catch (Exception ignored) {
-                    // JSON 파싱 오류는 무시했습니다.
-                }
-            }
+        List<ChatSessionSummaryResponse> list = new ArrayList<>();
+
+        for (ChatSession s : sessions) {
+
+            Optional<ChatMessage> lastMsg =
+                    messageRepo.findTopBySessionIdOrderByCreatedAtDesc(s.getId());
+
+            String latestMsg = lastMsg.map(ChatMessage::getText).orElse("");
+
+            list.add(ChatSessionSummaryResponse.builder()
+                    .sessionId(s.getId())
+                    .type(s.getType())
+                    .topic(s.getTopic())
+                    .latestMessage(latestMsg)
+                    .createdAt(s.getStartTime())
+                    .build());
         }
-        return new ArrayList<>(uniqueRecommendations.values());
+
+        return list;
+    }
+
+    public List<ChatSessionSummaryResponse> getMySessionList() {
+        return getSessionList("MY");
+    }
+
+    public List<ChatSessionSummaryResponse> getSpaceSessionList() {
+        return getSessionList("SPACE");
     }
 }
